--- a/index.html
+++ b/index.html
@@ -81,11 +81,6 @@
                     <div class="typed-text d-none">Full Stack Developer, IT Technician, Data Specialist</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="#contact" class="btn btn-primary py-3 px-4 me-5">Contact Me</a>
-                        <button type="button" class="btn-play" data-bs-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                            <span></span>
-                        </button>
-                        <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -136,7 +131,7 @@
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="#project">Read More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
@@ -251,19 +246,19 @@
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">C</h6>
-                                    <h6 class="font-weight-bold">80%</h6>
+                                    <h6 class="font-weight-bold">40%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">C++</h6>
-                                    <h6 class="font-weight-bold">80%</h6>
+                                    <h6 class="font-weight-bold">50%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
@@ -344,7 +339,7 @@
                                     <div class="mt-2">
                                         <a class="btn btn-sm btn-outline-primary me-2" href="documents/certificate.pdf" target="_blank" rel="noreferrer">View Certificate</a>
                                         <a class="btn btn-sm btn-primary" href="documents/certificate.pdf" download>Download</a>
-                                    </div>
+                                </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Full Grade Twelve (12) High School Certificate</h5>
@@ -354,7 +349,7 @@
                                     <div class="mt-2">
                                         <a class="btn btn-sm btn-outline-primary me-2" href="documents/grade_12_results.pdf" target="_blank" rel="noreferrer">View Results</a>
                                         <a class="btn btn-sm btn-primary" href="documents/grade_12_results.pdf" download>Download</a>
-                                    </div>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -449,7 +444,7 @@
                 </div>
             </div>
             <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.1s">
-                <div class="col-lg-4 col-md-6 portfolio-item first">
+                <div class="col-lg-6 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-1.jpg" alt="">
                         <div class="portfolio-btn">
@@ -457,8 +452,12 @@
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/robertxulu9/Your-New-Home/blob/main/README.md"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
+                    <div class="portfolio-info">
+                        <h5>Your New Home — Real Estate Website</h5>
+                        <p>A responsive real estate platform showcasing listings with search and filtering.</p>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second">
+                <div class="col-lg-6 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-2.jpg" alt="">
                         <div class="portfolio-btn">
@@ -466,8 +465,12 @@
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/robertxulu9/Case-Management-System/blob/main/README.md"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
+                    <div class="portfolio-info">
+                        <h5>Case Management System</h5>
+                        <p>Web app to manage legal cases, tasks, and documents with role-based access.</p>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item first">
+                <div class="col-lg-6 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-3.jpg" alt="">
                         <div class="portfolio-btn">
@@ -475,17 +478,12 @@
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/robertxulu9/utimate-scoreboard"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second">
-                    <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-4.jpg" alt="">
-                        <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
-                        </div>
+                    <div class="portfolio-info">
+                        <h5>Ultimate Scoreboard</h5>
+                        <p>Live scoreboard with team management and real-time score updates.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item first">
+                <div class="col-lg-6 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-5.jpg" alt="">
                         <div class="portfolio-btn">
@@ -493,14 +491,9 @@
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://portfolio-mu-henna-12.vercel.app/"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second">
-                    <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-6.jpg" alt="">
-                        <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
-                        </div>
+                    <div class="portfolio-info">
+                        <h5>Portfolio Website</h5>
+                        <p>Personal portfolio with projects, services, and contact integration.</p>
                     </div>
                 </div>
             </div>
@@ -528,15 +521,15 @@
                 </div>
             </div>
             <div class="row g-5">
-                <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-12 col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="mb-2">My office:</p>
                     <h3 class="fw-bold">House No 9687, Chudleigh, Lusaka</h3>
                     <hr class="w-100">
                     <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold"><a href="tel:+260771250133" class="text-white">+260 771 250 133</a></h3>
+                    <h3 class="fw-bold"><a href="tel:+260771250133">+260 771 250 133</a></h3>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
-                    <h3 class="fw-bold"><a href="mailto:robertxulu9@gmail.com" class="text-white">robertxulu9@gmail.com</a></h3>
+                    <h3 class="fw-bold"><a href="mailto:robertxulu9@gmail.com">robertxulu9@gmail.com</a></h3>
                     <hr class="w-100">
                     <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2">
@@ -544,40 +537,7 @@
                         <a class="btn btn-square btn-primary me-2" href="mailto:robertxulu9@gmail.com"><i class="fa fa-envelope"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Message</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                
             </div>
         </div>
     </div>
